--- a/cart.html
+++ b/cart.html
@@ -68,8 +68,9 @@
       </article>
     </section>
     <main>
-      <article id="cartproducts"></article>
-      <article class="cart-resume" id="total"></article>
+      <div class="container">      </div>
+        
+        <article id="total"></article>
     </main>
     <footer>
       <div id="footer" class="footer-container"></div>
