--- a/cart.html
+++ b/cart.html
@@ -68,9 +68,9 @@
       </article>
     </section>
     <main>
-      <div class="container">      </div>
-        
-        <article id="total"></article>
+      <div class="cart-section"></div>
+
+      <article class="cart-resume" id="total"></article>
     </main>
     <footer>
       <div id="footer" class="footer-container"></div>
