--- a/details.html
+++ b/details.html
@@ -286,5 +286,6 @@
     <script src="./scripts/layout.js"></script>
     <script src="./scripts/products.js"></script>
     <script src="./scripts/productDetail.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
