--- a/cart.html
+++ b/cart.html
@@ -78,5 +78,6 @@
     </footer>
     <script src="./scripts/layout.js"></script>
     <script src="./scripts/cart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
