--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/layout.css" />
-    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="styles/cart.css">
     <title>Tienda Virtual</title>
   </head>
   <body>
@@ -68,9 +68,11 @@
       </article>
     </section>
     <main>
-      <div class="cart-section"></div>
-
-      <article class="cart-resume" id="total"></article>
+      <section class="cart-section">
+        <article id="productscart"></article>
+        <article id="total"></article>
+      </section>
+      <!-- <article class="cart-resume" id="total"></article> -->
     </main>
     <footer>
       <div id="footer" class="footer-container"></div>
